# dj-hello-world

./: pyproject.toml  requirements.txt
core/: settings.py
